CHANGELOG
=========


2021-12-21
----------
### Changelog extractor
* Save verbose flag globally to use it in all functions.
* MarkDown: Support version declarations in square brackets [] (used by pdftk).

2021-12-10
----------
### Changelog extractor
* Ignoring hidden files: allow ./
* Allow single dashes, ignore two dashes

2021-11-15
----------
### Changelog extractor
* Ignore files with dashes in the file name.
* Handle and ignore empty files.


2021-09-26
----------
### Changelog extractor
* GitHub extraction: Support Source URLs with `archive/refs/tags/...` instead of `archive/...`.

2021-09-24
----------
### Changelog extractor
* rst: remove some headers to support geoip2 format.
* `convert_base_after`: fix logic for removing changes of previous version. The code erroneously removed the last character if the previous version was not found.

2021-09-18
----------
### Changelog extractor
* Add command line parameter `--github-current-version` to use a custom tag name or commit id as current version for the GitHub extraction.


2021-09-04
----------
### Changelog extractor
* Detect GitHub repository also by URL tag of specfile and detect tag prefix by querying the last tag.

### Specfile
* New method `get_url`.

2021-08-08
----------
### Changelog extractor
* Add confluence syntax support for workrave (fixes #10).
* Optimize previous-version-detection and add tests (fixes #9).
* Download and convert changelog from GitHub commit history if appropriate and possible.
* Detect rst and changelog automatically with characteristics inside the file (#6).

### Specfile
* Helper: Detect GitHub tag prefix from source URL.

2021-08-04
----------
### Specfile
* Version updater: Convert command line arguments to optional parameters.
* Version updater: Give text output if no source tag could be detected automatically.

2021-07-18
----------
### Changelog extractor
* Better detect previous version.
* Archives: Support tar.bz2 and exclude .asc files automatically.