@@ -2,6 +2,11 @@ CHANGELOG
 =========
 
 
+2022-01-18
+----------
+### Changelog extractor
+* Added parameter `--vc` to call `osc vc` with the extracted changelog.
+
 2021-12-21
 ----------
 ### Changelog extractor
